# enpm702-fall-2025

./: CMakeLists.txt
week1/: CMakeLists.txt  Doxyfile
week1/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  lecture1_8hpp_source.html  navtreedata.js  navtreeindex0.js  week1_8cpp.html  week1_8cpp__incl.dot  week1_8cpp_source.html
week1/docs/html/search/: all_1.js  files_0.js  functions_0.js
week1/src/: week1.cpp
week2/: CMakeLists.txt
week2/src/: test2.cpp  testio.cpp  week2.cpp  week2.i  week2_exercise.cpp
week3/: CMakeLists.txt
week3/src/: week3.cpp  week3_exercise.cpp
week4/: CMakeLists.txt
week4/src/: week4.cpp
